--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <!-- <script src="./ex-02-simpleSum.js"></script> -->
 
     <!-- ex-03 -->
-    <!-- <script src="./ex-03-getAverage.js"></script> -->
+    <script src="./ex-03-getAverage.js"></script>
 
     <!-- ex-04 -->
     <!-- <script src="./ex-04-isNegative.js"></script> -->
