--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
     <!-- <script src="./ex-02-simpleSum.js"></script> -->
 
     <!-- ex-03 -->
-    <script src="./ex-03-getAverage.js"></script>
+    <!-- <script src="./ex-03-getAverage.js"></script> -->
 
     <!-- ex-04 -->
     <!-- <script src="./ex-04-isNegative.js"></script> -->
 
     <!-- ex-05 -->
-    <!-- <script src="./ex-05-makeGreeting.js"></script> -->
+    <script src="./ex-05-makeGreeting.js"></script>
 
     <!-- ex-06 -->
     <!-- <script src="./ex-06-makeUserGreeting.js"></script> -->
