--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <!-- <script src="./ex-04-isNegative.js"></script> -->
 
     <!-- ex-05 -->
-    <script src="./ex-05-makeGreeting.js"></script>
+    <!-- <script src="./ex-05-makeGreeting.js"></script> -->
 
     <!-- ex-06 -->
     <!-- <script src="./ex-06-makeUserGreeting.js"></script> -->
