--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <!-- <script src="./ex-10-justOneString.js"></script> -->
 
     <!-- ex-11 -->
-    <!-- <script src="./ex-11-calcSpeedTicket.js"></script> -->
+    <script src="./ex-11-calcSpeedTicket.js"></script>
 
 
   </body>
